<resources>
    <string name="app_name">游戏交易平台</string>
    <string name="home">首页</string>
    <string name="sell">售卖</string>
    <string name="buy">购买</string>
    <string name="mine">我的</string>
    <string name="stock">库存</string>
    <string name="price">单价</string>
    <string name="New_releases">最新上架</string>
    <string name="New_Commit">最新提交</string>
    <string name="Post_sale">发布寄售</string>
    <string name="release">确认发布</string>
    <string name="Countable_number">可数数量</string>
    <string name="sell_number">出售数量</string>
    <string name="Fill_in">请填写  个</string>
    <string name="sell_price">出售单价</string>
    <string name="game_name">游戏名称</string>
    <string name="area">所在区域</string>
    <string name="goods_type">商品类型</string>
    <string name="Sale_List">可出售列表</string>
    <string name="current_balance">当前余额</string>
    <string name="my_order">我的订单</string>
    <string name="my_consignmentConsignment">我的寄售</string>
    <string name="Switch_money">切换币种</string>
    <string name="HotGame">热门游戏</string>
    <string name="language">切换语言</string>
    <string name="ConfirmOrder">确认订单</string>
    <string name="BuyNum">购买数量</string>
    <string name="delete">删除</string>
    <string name="total">合计</string>
    <string name="MyBalance">我的余额</string>
    <string name="ConfirmBuy">确认购买</string>
    <string name="MyAccount">我的账号(元)</string>
    <string name="BalanceRecord">余额记录</string>
    <string name="BalancePay">余额充值</string>
    <string name="ApplyForWithdraw">申请提现</string>
    <string name="WithdrawalAmount">可提现金额</string>
    <string name="PleaseEnterTheWithdrawalAmount">请输入提现金额</string>
    <string name="BankNum">请输入银行卡号</string>
    <string name="BankName">请输入银行名称</string>
    <string name="CardholderName">请输入持卡人姓名</string>
    <string name="CardholderPhone">请输入持卡人手机号</string>
    <string name="ConfirmSubmit">确认提交</string>
    <string name="ApplyCash">申请提现</string>
    <string name="all">全部</string>
    <string name="NoPayment">未付款</string>
    <string name="AccountPaid">已付款</string>
    <string name="common">共</string>
    <string name="piece">件</string>
    <string name="PaidPrice">实付金额</string>
    <string name="cancel">取消</string>
    <string name="pay">去付款</string>
    <string name="createdTime">创建时间</string>
    <string name="payTime">支付时间</string>
    <string name="payType">支付方式</string>
    <string name="orderDetail">订单详情</string>
    <string name="SearchGameName">搜索游戏名称</string>
    <string name="SelectGame">选择游戏</string>
    <string name="inputName">请输入当前游戏用户名</string>
    <string name="PleaseEnterTheCurrentGameUserPassword">请输入当前游戏密码</string>
    <string name="LogInTheGame">登录游戏</string>
    <string name="rangePrice">价格范围</string>
    <string name="MinPrice">最低价</string>
    <string name="HighPrice">最高价</string>
    <string name="gameArea">游戏区</string>
    <string name="gameService">游戏服</string>
    <string name="SwitchingArea">切换区服</string>
    <string name="confirm">确定</string>
    <string name="InTheSale">售卖中</string>
    <string name="HaveBeenSold">已售出</string>
    <string name="PaymentPassword">支付密码</string>
    <string name="AboutUs">关于我们</string>
    <string name="LogOut">退出登录</string>
    <string name="ConfirmSwitch">确认切换</string>
    <string name="MoreGame">更多游戏</string>
    <string name="ZongAndSorting">综和排序</string>
    <string name="Sortord">排序方式</string>
    <string name="Filter">筛选</string>
    <string name="Reset">重置</string>
    <string name="Message">消息</string>
</resources>
