<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="@dimen/dp_15"
    android:gravity="right"
    android:background="@color/white"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common"
        android:textColor="@color/text_shallow_gray"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:text="3"
        android:textColor="@color/text_gray"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piece"
        android:textColor="@color/text_shallow_gray"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/PaidPrice"
        android:textColor="@color/text_shallow_gray"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="￥ 111"
        android:textColor="@color/red_bg"
        android:textSize="14sp" />

</LinearLayout>