<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/app_bg"
    android:layout_height="match_parent">
    <include layout="@layout/action_bar_tv"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="15dp"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/text_gray"
            android:gravity="center_vertical"
            android:drawablePadding="@dimen/dp_10"
            android:text="@string/WithdrawalAmount"
            />
        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/red_bg"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_10"
            android:drawablePadding="@dimen/dp_10"
            android:text="￥ 120.0元"
            />
    </LinearLayout>
    <com.szw.framelibrary.view.ClearWriteEditText
        android:id="@+id/edBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="@dimen/sp_14"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:drawablePadding="@dimen/dp_10"
        android:inputType="numberDecimal"
        android:hint="@string/PleaseEnterTheWithdrawalAmount"
        />
    <com.szw.framelibrary.view.ClearWriteEditText
        android:id="@+id/edBankNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_gray"
        android:textCursorDrawable="@drawable/color_cursor"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/BankNum"
        />
    <com.szw.framelibrary.view.ClearWriteEditText
        android:id="@+id/edBankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:drawablePadding="@dimen/dp_10"
        android:textCursorDrawable="@drawable/color_cursor"
        android:hint="@string/BankName"
        />
    <com.szw.framelibrary.view.ClearWriteEditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/color_cursor"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/CardholderName"
        />
    <com.szw.framelibrary.view.ClearWriteEditText
        android:id="@+id/edphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:textCursorDrawable="@drawable/color_cursor"
        android:maxLines="1"
        android:drawablePadding="@dimen/dp_10"
        android:hint="@string/CardholderPhone"
        />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:drawableStart="@mipmap/ic_remind"
    android:text="每笔提现平台将收取5%手续费,请悉知"
    android:drawablePadding="@dimen/dp_10"
    android:textSize="12sp"
    android:textColor="@color/text_shallow_gray"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red_bg"
        android:padding="@dimen/dp_15"
        android:gravity="center"
        android:text="@string/ConfirmSubmit"
        android:textColor="@color/white"
        android:layout_gravity="bottom"
        android:textSize="@dimen/sp_14" />
    </LinearLayout>
</LinearLayout>