<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <include layout="@layout/action_bar_tv"></include>

    <TextView
        android:id="@+id/payPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:drawableEnd="@mipmap/ic_main_msg_right_next"
        android:padding="15dp"
        android:text="@string/PaymentPassword"
        android:textColor="@color/text_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/AboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:drawableEnd="@mipmap/ic_main_msg_right_next"
        android:padding="15dp"
        android:text="@string/AboutUs"
        android:textColor="@color/text_gray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:id="@+id/LogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/LogOut"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>