<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_b7000000"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="15dp"
            android:text="@string/rangePrice"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <View style="@style/lin"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_marginTop="13dp"
            android:padding="5dp">

            <EditText
                android:id="@+id/minPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_appbg_all"
                android:gravity="center"
                android:textColor="@color/text_gray"
                android:hint="@string/MinPrice"
                android:padding="10dp"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:background="@color/black"></View>

            <EditText
                android:id="@+id/highPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape_appbg_all"
                android:gravity="center"
                android:textColor="@color/text_gray"
                android:hint="@string/HighPrice"
                android:padding="10dp"
                android:textSize="14sp" />


        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="@dimen/dp_13"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/app_bg"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/Reset"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/orange"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>