<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <include layout="@layout/action_bar_tv"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MyAccount"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/BalanceRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BalanceRecord"
                android:drawableEnd="@mipmap/ic_main_msg_right_next"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:drawablePadding="@dimen/dp_10"
            android:drawableTop="@mipmap/wallet"
            android:gravity="center"
            android:id="@+id/balance"
            android:text="￥1000.0"
            android:textColor="@color/red_bg"
            android:textSize="18sp"
            android:textStyle="bold"

            />
    </LinearLayout>


    <TextView
        android:id="@+id/BalancePay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:padding="15dp"
        android:drawableStart="@mipmap/ic_balance_pay"
        android:textSize="@dimen/sp_14"
        android:drawableEnd="@mipmap/ic_main_msg_right_next"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/dp_10"
        android:text="@string/BalancePay"
        />
    <TextView
        android:id="@+id/ApplyForWithdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:padding="15dp"
        android:drawableStart="@mipmap/ic_applyfor_withdraw"
        android:textSize="@dimen/sp_14"
        android:drawableEnd="@mipmap/ic_main_msg_right_next"
        android:textColor="@color/text_gray"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/dp_10"
        android:text="@string/ApplyForWithdraw"
        />

</LinearLayout>