<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_name"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="魔兽世界"
            android:textColor="@color/text_shallow_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/lin"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:padding="@dimen/margin_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/area"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="电信区域"
            android:textColor="@color/text_shallow_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        style="@style/lin"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"></View>

    <LinearLayout
        android:id="@+id/GoodsType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_15">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_gray"
            android:text="@string/goods_type"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/goodsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/ic_main_msg_right_next"
            android:text="虚拟货币"
            android:textColor="@color/text_shallow_gray"
            android:textSize="14sp" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:text="@string/Sale_List"
        android:padding="15dp"
        android:textSize="14sp"
        android:textColor="@color/text_gray"
        />
</LinearLayout>