<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/lay_game_props"></include>

    <View
        style="@style/lin"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/BuyNum"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:scaleType="center"
            android:src="@mipmap/ic_minus" />

        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_cofirm_order"
            android:gravity="center"
            android:minEms="2"
            android:paddingBottom="1dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="1dp"
            android:text="1"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />


        <ImageView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:scaleType="center"
            android:src="@mipmap/ic_plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/dp_5"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_10"
        android:paddingStart="@dimen/dp_5"
        android:paddingTop="@dimen/dp_10"

        >

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_15"
            android:background="@drawable/shape_white_red_bg_line"
            android:minEms="2"
            android:paddingBottom="5dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/delete"
            android:textColor="@color/red_bg"
            android:textSize="@dimen/sp_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_marginEnd="10dp"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/sp_14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥1000"
                android:textColor="@color/red_bg"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>